--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>catrina la reina mas linda</h1>
     <h1>Ame la mas facha </h1>
+    <p>santi se fue al skatepark</p>
     
 </body>
 </html>
